# noarr-mpi

./: .clang-format  .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTES.md  README.md  build.sh  compare.sh  compareScatter.sh  configure.sh  format.sh  gen-plots.py  gen_plots.py  gen_plots.sh  requirements.txt  run.sh  test.sh
data/: compare-example-slurm.csv  compare-example.csv  compare.csv  compare.err  compare1.csv  compare1.err  compare2.csv  compare2.err  compare3.csv  compare3.err  compare4.csv  compare4.err  compare5.csv  compare5.err  compareScatter1.csv  compareScatter1.err  compareScatter2.csv  compareScatter2.err  compareScatter3.csv  compareScatter3.err  compareScatter4.csv  compareScatter4.err  compareScatter5.csv  compareScatter5.err
examples/boost/: CMakeLists.txt  gemm.cpp
examples/boost-mpi/: CMakeLists.txt  gemm.cpp
examples/boostP2P/: CMakeLists.txt  gemm.cpp
examples/gemm/: gemm-mpi.cpp  gemm.cpp  gemm.hpp
examples/include/: common.hpp  defines.hpp  gemm.hpp
examples/kokkos-comm/: CMakeLists.txt  gemm.cpp
examples/kokkosComm/: CMakeLists.txt  gemm.cpp
examples/mpi/: CMakeLists.txt  gemm.cpp
examples/mpl/: CMakeLists.txt  gemm.cpp
examples/noarr/: CMakeLists.txt  gemm-mpi.cpp  gemm-nompi.cpp  gemm.cpp
examples/test/: gemm-LARGE-INT.data  gemm-MEDIUM-DOUBLE.data  gemm-MEDIUM-FLOAT.data  gemm-MINI-DOUBLE.data  gemm-MINI-FLOAT.data  gemm-SMALL-DOUBLE.data  gemm-SMALL-FLOAT.data
include/noarr/: mpi.hpp  tokenizer.hpp
include/noarr/mpi/: algorithms.hpp  bag.hpp  structs.hpp  transform.hpp  traverser.hpp  utility.hpp
include/noarr/structures/extra/: tokenizer.hpp
include/noarr/structures/interop/: mpi_algorithms.hpp  mpi_bag.hpp  mpi_structs.hpp  mpi_transform.hpp  mpi_traverser.hpp  mpi_utility.hpp
src/: defines.hpp  gemm.cpp  gemm.hpp  matmul.cpp  mpi_transform.cpp
tests/: auto-permutate.cpp  gather-type-safe-1.cpp  gather-type-safe-2.cpp  gather-type-safe-3.cpp  reverse.cpp  scatter-type-safe-1.cpp  scatter-type-safe-2.cpp  scatter-type-safe-3.cpp  slice.cpp
