cmake_minimum_required(VERSION 3.20)

set(Kokkos_ENABLE_SERIAL ON CACHE BOOL "" FORCE)
set(Kokkos_ENABLE_OPENMP ON CACHE BOOL "" FORCE)

find_package(KokkosComm REQUIRED)

define_executable(gemm kokkosComm)
foreach(dataset ${DATASET_LIST})
  foreach(datatype ${DATATYPE_LIST})
    foreach(c_tile ${C_TILE_OPTIONS})
      foreach(a_tile ${A_TILE_OPTIONS})
        foreach(b_tile ${B_TILE_OPTIONS})
          set(executable_name gemm-kokkosComm-${dataset}-${datatype}-${c_tile}-${a_tile}-${b_tile})
          target_link_libraries(${executable_name} PRIVATE KokkosComm::KokkosComm)
        endforeach()
      endforeach()
    endforeach()
  endforeach()
endforeach()
